// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convert convertNullToString(object) 1`] = `
"Snapshot Diff:
- First value
+ Second value

  Object {
    \\"false\\": false,
    \\"float\\": 0.1,
    \\"int\\": 0,
    \\"minus\\": -1,
-   \\"null\\": null,
+   \\"null\\": \\"\\",
    \\"object\\": Object {},
    \\"string\\": \\"\\",
    \\"true\\": true,
  }"
`;

exports[`convert convertNumberToString(object) 1`] = `
"Snapshot Diff:
- First value
+ Second value

  Object {
    \\"false\\": false,
-   \\"float\\": 0.1,
-   \\"int\\": 0,
-   \\"minus\\": -1,
+   \\"float\\": \\"0.1\\",
+   \\"int\\": \\"0\\",
+   \\"minus\\": \\"-1\\",
    \\"null\\": null,
    \\"object\\": Object {},
    \\"string\\": \\"\\",
    \\"true\\": true,
  }"
`;

exports[`createByWorkSystem() 1`] = `
"Snapshot Diff:
- First value
+ Second value

  Object {
    \\"allowToChangeApproverSelf\\": false,
-   \\"amContractedWorkHours\\": null,
-   \\"amEndTime\\": null,
-   \\"amRest1EndTime\\": null,
-   \\"amRest1StartTime\\": null,
-   \\"amRest2EndTime\\": null,
-   \\"amRest2StartTime\\": null,
-   \\"amRest3EndTime\\": null,
-   \\"amRest3StartTime\\": null,
-   \\"amRest4EndTime\\": null,
-   \\"amRest4StartTime\\": null,
-   \\"amRest5EndTime\\": null,
-   \\"amRest5StartTime\\": null,
-   \\"amStartTime\\": null,
+   \\"allowWorkDuringHalfDayLeave\\": \\"\\",
+   \\"amContractedWorkHours\\": \\"\\",
+   \\"amEndTime\\": \\"\\",
+   \\"amRest1EndTime\\": \\"\\",
+   \\"amRest1StartTime\\": \\"\\",
+   \\"amRest2EndTime\\": \\"\\",
+   \\"amRest2StartTime\\": \\"\\",
+   \\"amRest3EndTime\\": \\"\\",
+   \\"amRest3StartTime\\": \\"\\",
+   \\"amRest4EndTime\\": \\"\\",
+   \\"amRest4StartTime\\": \\"\\",
+   \\"amRest5EndTime\\": \\"\\",
+   \\"amRest5StartTime\\": \\"\\",
+   \\"amStartTime\\": \\"\\",
    \\"baseId\\": \\"\\",
    \\"comment\\": \\"\\",
-   \\"compensatoryLeavePreRequestDays\\": null,
+   \\"compensatoryLeavePreRequestDays\\": \\"\\",
    \\"compensatoryLeaveRanges\\": \\"\\",
-   \\"compensatoryLeaveThresholdAllDay\\": null,
-   \\"compensatoryLeaveThresholdHalfDay\\": null,
+   \\"compensatoryLeaveThresholdAllDay\\": \\"\\",
+   \\"compensatoryLeaveThresholdHalfDay\\": \\"\\",
    \\"compensatoryLeaveValidPeriod\\": Array [],
-   \\"contractedWorkHours\\": null,
-   \\"directApplyEndTime\\": null,
-   \\"directApplyRest1EndTime\\": null,
-   \\"directApplyRest1StartTime\\": null,
-   \\"directApplyRest2EndTime\\": null,
-   \\"directApplyRest2StartTime\\": null,
-   \\"directApplyRest3EndTime\\": null,
-   \\"directApplyRest3StartTime\\": null,
-   \\"directApplyRest4EndTime\\": null,
-   \\"directApplyRest4StartTime\\": null,
-   \\"directApplyRest5EndTime\\": null,
-   \\"directApplyRest5StartTime\\": null,
-   \\"directApplyStartTime\\": null,
+   \\"contractedWorkHours\\": \\"\\",
+   \\"deemedOvertimeHours\\": \\"\\",
+   \\"deemedWorkHours\\": \\"\\",
+   \\"directApplyEndTime\\": \\"\\",
+   \\"directApplyRest1EndTime\\": \\"\\",
+   \\"directApplyRest1StartTime\\": \\"\\",
+   \\"directApplyRest2EndTime\\": \\"\\",
+   \\"directApplyRest2StartTime\\": \\"\\",
+   \\"directApplyRest3EndTime\\": \\"\\",
+   \\"directApplyRest3StartTime\\": \\"\\",
+   \\"directApplyRest4EndTime\\": \\"\\",
+   \\"directApplyRest4StartTime\\": \\"\\",
+   \\"directApplyRest5EndTime\\": \\"\\",
+   \\"directApplyRest5StartTime\\": \\"\\",
+   \\"directApplyStartTime\\": \\"\\",
    \\"endOfNightWork\\": \\"300\\",
-   \\"endTime\\": 1020,
+   \\"endTime\\": \\"1020\\",
+   \\"flexEndTime\\": \\"\\",
+   \\"flexStartTime\\": \\"\\",
+   \\"halfDayLeaveHours\\": \\"\\",
    \\"id\\": \\"\\",
+   \\"isIncludeHolidayWorkInDeemedTime\\": false,
+   \\"isIncludeHolidayWorkInPlainTime\\": false,
    \\"leaveCodeList\\": Array [],
-   \\"legalRestCheck1WorkTimeThreshold\\": null,
-   \\"legalRestCheck2WorkTimeThreshold\\": null,
+   \\"legalRestCheck1WorkTimeThreshold\\": \\"\\",
+   \\"legalRestCheck2WorkTimeThreshold\\": \\"\\",
    \\"legalWorkTypeADay\\": \\"480\\",
    \\"legalWorkTypeAWeek\\": \\"2400\\",
    \\"name_L0\\": \\"\\",
    \\"name_L1\\": \\"\\",
    \\"name_L2\\": \\"\\",
    \\"offsetOvertimeAndDeductionTime\\": false,
-   \\"pmContractedWorkHours\\": null,
-   \\"pmEndTime\\": null,
-   \\"pmRest1EndTime\\": null,
-   \\"pmRest1StartTime\\": null,
-   \\"pmRest2EndTime\\": null,
-   \\"pmRest2StartTime\\": null,
-   \\"pmRest3EndTime\\": null,
-   \\"pmRest3StartTime\\": null,
-   \\"pmRest4EndTime\\": null,
-   \\"pmRest4StartTime\\": null,
-   \\"pmRest5EndTime\\": null,
-   \\"pmRest5StartTime\\": null,
-   \\"pmStartTime\\": null,
+   \\"patternCodeList\\": Array [],
+   \\"pmContractedWorkHours\\": \\"\\",
+   \\"pmEndTime\\": \\"\\",
+   \\"pmRest1EndTime\\": \\"\\",
+   \\"pmRest1StartTime\\": \\"\\",
+   \\"pmRest2EndTime\\": \\"\\",
+   \\"pmRest2StartTime\\": \\"\\",
+   \\"pmRest3EndTime\\": \\"\\",
+   \\"pmRest3StartTime\\": \\"\\",
+   \\"pmRest4EndTime\\": \\"\\",
+   \\"pmRest4StartTime\\": \\"\\",
+   \\"pmRest5EndTime\\": \\"\\",
+   \\"pmRest5StartTime\\": \\"\\",
+   \\"pmStartTime\\": \\"\\",
    \\"requireEarlyStartWorkApply\\": false,
-   \\"requireEarlyStartWorkApplyBefore\\": null,
+   \\"requireEarlyStartWorkApplyBefore\\": \\"\\",
    \\"requireOvertimeWorkApply\\": false,
-   \\"requireOvertimeWorkApplyAfter\\": null,
-   \\"rest1EndTime\\": 780,
-   \\"rest1StartTime\\": 720,
-   \\"rest2EndTime\\": null,
-   \\"rest2StartTime\\": null,
-   \\"rest3EndTime\\": null,
-   \\"rest3StartTime\\": null,
-   \\"rest4EndTime\\": null,
-   \\"rest4StartTime\\": null,
-   \\"rest5EndTime\\": null,
-   \\"rest5StartTime\\": null,
+   \\"requireOvertimeWorkApplyAfter\\": \\"\\",
+   \\"rest1EndTime\\": \\"780\\",
+   \\"rest1StartTime\\": \\"720\\",
+   \\"rest2EndTime\\": \\"\\",
+   \\"rest2StartTime\\": \\"\\",
+   \\"rest3EndTime\\": \\"\\",
+   \\"rest3StartTime\\": \\"\\",
+   \\"rest4EndTime\\": \\"\\",
+   \\"rest4StartTime\\": \\"\\",
+   \\"rest5EndTime\\": \\"\\",
+   \\"rest5StartTime\\": \\"\\",
    \\"startOfNightWork\\": \\"1320\\",
-   \\"startTime\\": 480,
+   \\"startTime\\": \\"480\\",
    \\"substituteLeaveCode\\": Array [],
+   \\"useAMHalfDayLeave\\": false,
    \\"useAbsenceApply\\": false,
    \\"useCompensatoryLeavePreRequest\\": false,
    \\"useDirectApply\\": false,
    \\"useEarlyStartWorkApply\\": false,
    \\"useHalfDayCompensatoryLeaveGrant\\": false,
+   \\"useHalfDayLeave\\": false,
    \\"useLegalRestCheck1\\": false,
    \\"useLegalRestCheck2\\": false,
    \\"useOvertimeWorkApply\\": false,
+   \\"usePMHalfDayLeave\\": false,
+   \\"usePatternApply\\": false,
    \\"useSubstituteLeaveTypes\\": Array [],
    \\"validDateFrom\\": \\"\\",
    \\"validDateTo\\": \\"\\",
    \\"weeklyDayTypeFRI\\": \\"Workday\\",
    \\"weeklyDayTypeMON\\": \\"Workday\\",
    \\"weeklyDayTypeSAT\\": \\"Workday\\",
    \\"weeklyDayTypeSUN\\": \\"Workday\\",
    \\"weeklyDayTypeTHU\\": \\"Workday\\",
    \\"weeklyDayTypeTUE\\": \\"Workday\\",
    \\"weeklyDayTypeWED\\": \\"Workday\\",
-   \\"workSystem\\": \\"JP:Fix\\",
  }"
`;
